fix: Fix scrolling to top on Firefox
Turbolinks fails to scrolling to the top of the page on Firefox in some
specific cases. The issue seems to come from `scroll-behavior: smooth`
so I'm only removing it for the moment since it's not essential.

Reference: https://github.com/turbolinks/turbolinks/issues/556

--- a/src/assets/stylesheets/application.css
+++ b/src/assets/stylesheets/application.css
@@ -28,8 +28,6 @@
 
 html {
     font-size: 10px;
-
-    scroll-behavior: smooth;
 }
 
 body {
